      to Carl Fürstenberg for the report.  (Closes: #474590)
  * lib/Text_utils.pm:
    + [NT] Close <p>-tags in dtml_to_html since the output is used
      in xhtml (xml), where all tags must be closed properly.
      (Closes: #639292)
    + [NT] Remove the last new line (if any) before a </pre> in tag
      to reduce the empty space to the next paragraph.

  * profiles/debian/ftp-master-auto-reject.profile:
    + [NT] Refreshed to include udeb-uses-non-gzip-data-tarball.

  * private/*:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
  * private/refresh-manual-refs:
    + [NT] Remove code to refresh refs to the Library Packaging
      Guide.
    + [JW] Added the java-policy and fixed the lintian ref.
    + [JW] Don't strip newlines from titles, but treat them as regular
      whitespace characters.
    + [JW] Strip some superfluous HTML markup from titles.

  * reporting/{config,html_reports,templates/foot.tmpl}:
    + [NT] Added a link to the Lintian source code.
  * reporting/harness:
    + [NT] Added missing import statement.
  * reporting/html_reports:
    + [JW,NT] Create a gzip'ed version of the raw lintian.log.
      (Closes: #637819)
  * reporting/templates/index.tmpl:
    + [NT] Added link to the new gzip'ed lintian.log.

  * t/*:
    + [JW,NT] Fixed test failures caused by unpacking the source
      with a umask different from 0022.  (Closes: #637649)

 -- Niels Thykier <niels@thykier.net>  Wed, 10 Aug 2011 21:09:24 +0200

lintian (2.5.2) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-rules-uses-deprecated-makefile
      - debian-rules-uses-or-modifies-user-only-variable
      - duplicate-changelog-files
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - udeb-uses-non-gzip-data-tarball
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep
